packages/otupy/otupy-1.1.12.tar.gz/otupy-1.1.12/validation/openc2-cbor-samples/tests/commands/bad/allow_ipv4net_cidr.cbor
¢factioneallowftarget¡hipv4_netk127.0.0.1/8